--- a/blogs.html
+++ b/blogs.html
@@ -61,51 +61,74 @@
         <a href="/contact.html" class="btn">Contact Me</a>
     </section>
 
-    <main id="content" class="main-content" role="main">    
-    
-    <p>Hello, I am Adivardhan Maheshwari. This is my personal website. I've decided to remove all analytics as I value
-      the privacy of my visitors. However, I appreciate knowing when someone has visited my website. So, I'm working on
-      adding a 'like' button that will act as a simple counter. This will only be visible to YOU and if you choose to
-      click it, I will know someone out there visited my site. Stay tuned for the update!</p>
+    <main id="content" class="main-content" role="main">
 
-    <p><em style="font-size: 15px;">(Sept, 2022-present)</em><br>I am pursuing my Masters in Informaton Systems Security
-      Engineering at Concordia University. <br>In the past few
-      months, I have been exposed to a wide-set of tools used for security and privacy analysis not limited to
-      Burp-Suite, MITM proxy, jadX, GenyMotion, Triage, Mob-SF, wireshark.</p>
+        <p>Hello, I am Adivardhan Maheshwari. This is my personal website. I've decided to remove all analytics as I
+            value
+            the privacy of my visitors. However, I appreciate knowing when someone has visited my website. So, I'm
+            working on
+            adding a 'like' button that will act as a simple counter. This will only be visible to YOU and if you choose
+            to
+            click it, I will know someone out there visited my site. Stay tuned for the update!</p>
 
-    <p><em style="font-size: 15px;">(Jan, 2021-Aug, 2022)</em><br>Before starting my Masters, I worked as a Full-Stack
-      Developer at Principal Global Services, India. I got great hands-on expereince on a wide set of tools and
-      technologies like VueJS, JAVA, SQL, AWS, CI/CD, Github Actions, Sentry, Pagerduty and many more. This gave me an
-      holistic understanding of the products are developed and integrated with other products and technologies and
-      everything around it.<br>
+        <p><em style="font-size: 15px;">(Sept, 2022-present)</em><br>I am pursuing my Masters in Informaton Systems
+            Security
+            Engineering at Concordia University. <br>In the past few
+            months, I have been exposed to a wide-set of tools used for security and privacy analysis not limited to
+            Burp-Suite, MITM proxy, jadX, GenyMotion, Triage, Mob-SF, wireshark.</p>
 
-      My main job-role revolved around developing features in VueJS but it was not limited to just that. This job was my
-      first time for many dev things. <br>
+        <p><em style="font-size: 15px;">(Jan, 2021-Aug, 2022)</em><br>Before starting my Masters, I worked as a
+            Full-Stack
+            Developer at Principal Global Services, India. I got great hands-on expereince on a wide set of tools and
+            technologies like VueJS, JAVA, SQL, AWS, CI/CD, Github Actions, Sentry, Pagerduty and many more. This gave
+            me an
+            holistic understanding of the products are developed and integrated with other products and technologies and
+            everything around it.<br>
 
-      I also had the opportunity to work on a centralized customizable Github Actions process that would be called up by
-      individual repositories. I also had an opportunity to setup alarms in Github actions that would send alarms and
-      notifications to seperate MS Teams channels as per defined requirement. Great hands-on exercise to actaully
-      understand APIs.
+            My main job-role revolved around developing features in VueJS but it was not limited to just that. This job
+            was my
+            first time for many dev things. <br>
 
-      I worked as a code owner for a couple of repositories. This gave me an amazing opportunity to work with PRs,
-      maintain repos, clean-up issues and actively get acquainted with code in different repos. <br>
+            I also had the opportunity to work on a centralized customizable Github Actions process that would be called
+            up by
+            individual repositories. I also had an opportunity to setup alarms in Github actions that would send alarms
+            and
+            notifications to seperate MS Teams channels as per defined requirement. Great hands-on exercise to actaully
+            understand APIs.
 
-      Well, I couldn't find work to put my Python skills to use so I found opportunies where I could use them. I wrote
-      an automation script(in Python) that drastically reduced the manual effort by 95% when performing database
-      procedures
-      clean-up. <br>
+            I worked as a code owner for a couple of repositories. This gave me an amazing opportunity to work with PRs,
+            maintain repos, clean-up issues and actively get acquainted with code in different repos. <br>
 
-      I also had an amazing opportunity to participate in <a
-        hre="https://technology.principal.com/blog/cloudathon-success-stories">Principal AWS cloudathon</a> where we
-      developed a system which redacts Personally
-      Identifiable Information on-the-fly whenever new data is uploaded to S3 bucket. This gave me exposure to using
-      various AWS products(EC2, Lambda, AthenaDB, S3, AWS CLI, Cloud 9) and linking them. (Noob tip: Use cloud 9 when
-      deploying code and running scripts and don't want to deal with network restrictions.) Guess what - Most of it was
-      in Python cuz why not!(and also because it was a POC) :) <br>
-    </p>
+            Well, I couldn't find work to put my Python skills to use so I found opportunies where I could use them. I
+            wrote
+            an automation script(in Python) that drastically reduced the manual effort by 95% when performing database
+            procedures
+            clean-up. <br>
 
-    <div id="feed"></div>
-</main>
+            I also had an amazing opportunity to participate in <a
+                hre="https://technology.principal.com/blog/cloudathon-success-stories">Principal AWS cloudathon</a>
+            where we
+            developed a system which redacts Personally
+            Identifiable Information on-the-fly whenever new data is uploaded to S3 bucket. This gave me exposure to
+            using
+            various AWS products(EC2, Lambda, AthenaDB, S3, AWS CLI, Cloud 9) and linking them. (Noob tip: Use cloud 9
+            when
+            deploying code and running scripts and don't want to deal with network restrictions.) Guess what - Most of
+            it was
+            in Python cuz why not!(and also because it was a POC) :) <br>
+        </p>
+
+        <p><em style="font-size: 15px;">(May, 2019 - present)</em><br>I have been teaching students various topics
+            related to computer science. This included pair programming, assignment and projects, and also helping them
+            with their doubts. I have taught students from various backgrounds and age groups. Some structed courses
+            include AP Computer Science Principles, Python Bootcamp, Introduction to Data Science and Manipulation,
+            Automation using Programming, Introduction to various programming languages, black programming using
+            code.org, Full-stack development and game development. Feedback from students and parents have equally
+            satisfactoy. I continue to teach as the time permits and feel free to get in touch with me if you're
+            interested in learning something.</p>
+
+        <div id="feed"></div>
+    </main>
     <script>
         // URL of the JSON feed
         const JSON_URL = 'https://api.rss2json.com/v1/api.json?rss_url=https://medium.com/feed/@adivardhan';
